Don't use dropwizard, include things as needed
Make Persnicketly the main method that runs Jetty